Fix Java8 Support
Signed-off-by: Jman420 <jgiannone@mdsol.com>